welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:7: error: ';' expected but 'if' found.
  } if (Math.min(Math.min(a,b),c)<a-10) {
    ^